--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Tom Dong <tom.tung.dyb@gmail.com>"]
 [dependencies]
 fasthash = "0.3"
 itertools = "0.7"
-rand = "0.6.0-pre.0"
+rand = "0.6.0-pre.1"
 serde = "1.0"
 serde_derive = "1.0"
 maplit = "1.0"
@@ -17,6 +17,7 @@ simple_logger = "0.5"
 pbr = "1.0"
 clap = {version = "2.32", features = ["yaml"]}
 rayon = "1.0"
+order-stat = "0.1"
 
 [profile.dev]
 opt-level = 3
