--- a/src/bin/cli.yml
+++ b/src/bin/cli.yml
@@ -22,6 +22,15 @@ subcommands:
         long: test_data
         takes_value: true
         value_name: PATH
+    - test_trees_singly:
+        help: Test forest tree by tree, freeing each before training the next to reduce memory usage. Model cannot be saved.
+        long: test_trees_singly
+        takes_value: false
+        requires:
+            - test_data
+        conflicts_with:
+            - model_path
+            - cv_splits_path
     - model_path:
         help: Path to which the trained model will be saved if provided
         long: model_path
