--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Tom Dong <tom.tung.dyb@gmail.com>"]
 [dependencies]
 fasthash = "0.3"
 itertools = "0.7"
-rand = "0.6.0-pre.1"
+rand = "0.6"
 serde = "1.0"
 serde_derive = "1.0"
 maplit = "1.0"
